tests/good/syntax/080-block-comment-on-one-line.clap
val x = 42 (* foo *)

