tests/bad/lexical/079-type-wrong-boundaries-parentheses.clap
type foo (bar, moo) = bar
